// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fuzzer should fuzz the length of a prop of the request body above the defined maximum 1`] = `
"{
    \\"name\\": \\"Elon Musk\\",
    \\"company_name\\": \\"Spacex\\",
    \\"owner_id\\": \\"54321\\",
    \\"company_id\\": \\"2\\",
    \\"contact_id\\": \\"2\\",
    \\"first_name\\": \\"ElonEEEE\\",
    \\"last_name\\": \\"Musk\\",
    \\"description\\": \\"A thinker\\",
    \\"prefix\\": \\"Sir\\",
    \\"title\\": \\"CEO\\",
    \\"status\\": \\"New\\",
    \\"monetary_amount\\": 75000,
    \\"currency\\": \\"USD\\",
    \\"fax\\": \\"+12129876543\\",
    \\"websites\\": [
        {
            \\"url\\": \\"http://example.com\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"url\\": \\"http://example.com\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"addresses\\": [
        {
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\",
            \\"name\\": \\"HQ US\\",
            \\"line1\\": \\"Main street\\",
            \\"line2\\": \\"apt #\\",
            \\"city\\": \\"San Francisco\\",
            \\"state\\": \\"CA\\",
            \\"postal_code\\": \\"94104\\",
            \\"country\\": \\"US\\",
            \\"latitude\\": \\"40.759211\\",
            \\"longitude\\": \\"-73.984638\\"
        },
        {
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\",
            \\"name\\": \\"HQ US\\",
            \\"line1\\": \\"Main street\\",
            \\"line2\\": \\"apt #\\",
            \\"city\\": \\"San Francisco\\",
            \\"state\\": \\"CA\\",
            \\"postal_code\\": \\"94104\\",
            \\"country\\": \\"US\\",
            \\"latitude\\": \\"40.759211\\",
            \\"longitude\\": \\"-73.984638\\"
        }
    ],
    \\"social_links\\": [
        {
            \\"url\\": \\"https://www.twitter.com/apideck-io\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"twitter\\"
        },
        {
            \\"url\\": \\"https://www.twitter.com/apideck-io\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"twitter\\"
        }
    ],
    \\"phone_numbers\\": [
        {
            \\"number\\": \\"111-111-1111\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"number\\": \\"111-111-1111\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"emails\\": [
        {
            \\"email\\": \\"elon@musk.com\\",
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"email\\": \\"elon@musk.com\\",
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"custom_fields\\": [
        {
            \\"id\\": \\"custom_technologies\\",
            \\"value\\": \\"Uses Salesforce and Marketo\\"
        },
        {
            \\"id\\": \\"custom_technologies\\",
            \\"value\\": \\"Uses Salesforce and Marketo\\"
        }
    ],
    \\"tags\\": [
        \\"New\\"
    ]
}"
`;

exports[`Fuzzer should fuzz the length of a prop of the request body above the defined minimum 1`] = `
"{
    \\"name\\": \\"Elon Musk\\",
    \\"company_name\\": \\"Spacex\\",
    \\"owner_id\\": \\"54321\\",
    \\"company_id\\": \\"2\\",
    \\"contact_id\\": \\"2\\",
    \\"first_name\\": \\"Elon\\",
    \\"last_name\\": \\"Musk\\",
    \\"description\\": \\"A thinker\\",
    \\"prefix\\": \\"Sir\\",
    \\"title\\": \\"CEO\\",
    \\"status\\": \\"New\\",
    \\"monetary_amount\\": 75000,
    \\"currency\\": \\"USD\\",
    \\"fax\\": \\"+12129876543\\",
    \\"websites\\": [
        {
            \\"url\\": \\"http://example.com\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"url\\": \\"http://example.com\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"addresses\\": [
        {
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\",
            \\"name\\": \\"HQ US\\",
            \\"line1\\": \\"Main street\\",
            \\"line2\\": \\"apt #\\",
            \\"city\\": \\"San Francisco\\",
            \\"state\\": \\"CA\\",
            \\"postal_code\\": \\"94104\\",
            \\"country\\": \\"US\\",
            \\"latitude\\": \\"40.759211\\",
            \\"longitude\\": \\"-73.984638\\"
        },
        {
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\",
            \\"name\\": \\"HQ US\\",
            \\"line1\\": \\"Main street\\",
            \\"line2\\": \\"apt #\\",
            \\"city\\": \\"San Francisco\\",
            \\"state\\": \\"CA\\",
            \\"postal_code\\": \\"94104\\",
            \\"country\\": \\"US\\",
            \\"latitude\\": \\"40.759211\\",
            \\"longitude\\": \\"-73.984638\\"
        }
    ],
    \\"social_links\\": [
        {
            \\"url\\": \\"https://www.twitter.com/apideck-io\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"twitter\\"
        },
        {
            \\"url\\": \\"https://www.twitter.com/apideck-io\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"twitter\\"
        }
    ],
    \\"phone_numbers\\": [
        {
            \\"number\\": \\"111-111-1111\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"number\\": \\"111-111-1111\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"emails\\": [
        {
            \\"email\\": \\"elon@musk.com\\",
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"email\\": \\"elon@musk.com\\",
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"custom_fields\\": [
        {
            \\"id\\": \\"custom_technologies\\",
            \\"value\\": \\"Uses Salesforce and Marketo\\"
        },
        {
            \\"id\\": \\"custom_technologies\\",
            \\"value\\": \\"Uses Salesforce and Marketo\\"
        }
    ],
    \\"tags\\": [
        \\"New\\"
    ]
}"
`;

exports[`Fuzzer should fuzz the multiple required props of the request body 1`] = `
"{
    \\"name\\": \\"Elon Musk\\",
    \\"owner_id\\": \\"54321\\",
    \\"company_id\\": \\"2\\",
    \\"contact_id\\": \\"2\\",
    \\"first_name\\": \\"Elon\\",
    \\"last_name\\": \\"Musk\\",
    \\"description\\": \\"A thinker\\",
    \\"prefix\\": \\"Sir\\",
    \\"title\\": \\"CEO\\",
    \\"status\\": \\"New\\",
    \\"monetary_amount\\": 75000,
    \\"currency\\": \\"USD\\",
    \\"fax\\": \\"+12129876543\\",
    \\"websites\\": [
        {
            \\"url\\": \\"http://example.com\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"url\\": \\"http://example.com\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"addresses\\": [
        {
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\",
            \\"name\\": \\"HQ US\\",
            \\"line1\\": \\"Main street\\",
            \\"line2\\": \\"apt #\\",
            \\"city\\": \\"San Francisco\\",
            \\"state\\": \\"CA\\",
            \\"postal_code\\": \\"94104\\",
            \\"country\\": \\"US\\",
            \\"latitude\\": \\"40.759211\\",
            \\"longitude\\": \\"-73.984638\\"
        },
        {
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\",
            \\"name\\": \\"HQ US\\",
            \\"line1\\": \\"Main street\\",
            \\"line2\\": \\"apt #\\",
            \\"city\\": \\"San Francisco\\",
            \\"state\\": \\"CA\\",
            \\"postal_code\\": \\"94104\\",
            \\"country\\": \\"US\\",
            \\"latitude\\": \\"40.759211\\",
            \\"longitude\\": \\"-73.984638\\"
        }
    ],
    \\"social_links\\": [
        {
            \\"url\\": \\"https://www.twitter.com/apideck-io\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"twitter\\"
        },
        {
            \\"url\\": \\"https://www.twitter.com/apideck-io\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"twitter\\"
        }
    ],
    \\"phone_numbers\\": [
        {
            \\"number\\": \\"111-111-1111\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"number\\": \\"111-111-1111\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"emails\\": [
        {
            \\"email\\": \\"elon@musk.com\\",
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"email\\": \\"elon@musk.com\\",
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"custom_fields\\": [
        {
            \\"id\\": \\"custom_technologies\\",
            \\"value\\": \\"Uses Salesforce and Marketo\\"
        },
        {
            \\"id\\": \\"custom_technologies\\",
            \\"value\\": \\"Uses Salesforce and Marketo\\"
        }
    ],
    \\"tags\\": [
        \\"New\\"
    ]
}"
`;

exports[`Fuzzer should fuzz the required prop of the request body 1`] = `
"{
    \\"company_name\\": \\"Spacex\\",
    \\"owner_id\\": \\"54321\\",
    \\"company_id\\": \\"2\\",
    \\"contact_id\\": \\"2\\",
    \\"first_name\\": \\"Elon\\",
    \\"last_name\\": \\"Musk\\",
    \\"description\\": \\"A thinker\\",
    \\"prefix\\": \\"Sir\\",
    \\"title\\": \\"CEO\\",
    \\"status\\": \\"New\\",
    \\"monetary_amount\\": 75000,
    \\"currency\\": \\"USD\\",
    \\"fax\\": \\"+12129876543\\",
    \\"websites\\": [
        {
            \\"url\\": \\"http://example.com\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"url\\": \\"http://example.com\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"addresses\\": [
        {
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\",
            \\"name\\": \\"HQ US\\",
            \\"line1\\": \\"Main street\\",
            \\"line2\\": \\"apt #\\",
            \\"city\\": \\"San Francisco\\",
            \\"state\\": \\"CA\\",
            \\"postal_code\\": \\"94104\\",
            \\"country\\": \\"US\\",
            \\"latitude\\": \\"40.759211\\",
            \\"longitude\\": \\"-73.984638\\"
        },
        {
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\",
            \\"name\\": \\"HQ US\\",
            \\"line1\\": \\"Main street\\",
            \\"line2\\": \\"apt #\\",
            \\"city\\": \\"San Francisco\\",
            \\"state\\": \\"CA\\",
            \\"postal_code\\": \\"94104\\",
            \\"country\\": \\"US\\",
            \\"latitude\\": \\"40.759211\\",
            \\"longitude\\": \\"-73.984638\\"
        }
    ],
    \\"social_links\\": [
        {
            \\"url\\": \\"https://www.twitter.com/apideck-io\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"twitter\\"
        },
        {
            \\"url\\": \\"https://www.twitter.com/apideck-io\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"twitter\\"
        }
    ],
    \\"phone_numbers\\": [
        {
            \\"number\\": \\"111-111-1111\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"number\\": \\"111-111-1111\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"emails\\": [
        {
            \\"email\\": \\"elon@musk.com\\",
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"email\\": \\"elon@musk.com\\",
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"custom_fields\\": [
        {
            \\"id\\": \\"custom_technologies\\",
            \\"value\\": \\"Uses Salesforce and Marketo\\"
        },
        {
            \\"id\\": \\"custom_technologies\\",
            \\"value\\": \\"Uses Salesforce and Marketo\\"
        }
    ],
    \\"tags\\": [
        \\"New\\"
    ]
}"
`;

exports[`Fuzzer should fuzz the value of a prop of the request body above the defined maximum 1`] = `
"{
    \\"name\\": \\"Elon Musk\\",
    \\"company_name\\": \\"Spacex\\",
    \\"owner_id\\": \\"54321\\",
    \\"company_id\\": \\"2\\",
    \\"contact_id\\": \\"2\\",
    \\"first_name\\": \\"Elon\\",
    \\"last_name\\": \\"Musk\\",
    \\"description\\": \\"A thinker\\",
    \\"prefix\\": \\"Sir\\",
    \\"title\\": \\"CEO\\",
    \\"status\\": \\"New\\",
    \\"monetary_amount\\": 301,
    \\"currency\\": \\"USD\\",
    \\"fax\\": \\"+12129876543\\",
    \\"websites\\": [
        {
            \\"url\\": \\"http://example.com\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"url\\": \\"http://example.com\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"addresses\\": [
        {
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\",
            \\"name\\": \\"HQ US\\",
            \\"line1\\": \\"Main street\\",
            \\"line2\\": \\"apt #\\",
            \\"city\\": \\"San Francisco\\",
            \\"state\\": \\"CA\\",
            \\"postal_code\\": \\"94104\\",
            \\"country\\": \\"US\\",
            \\"latitude\\": \\"40.759211\\",
            \\"longitude\\": \\"-73.984638\\"
        },
        {
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\",
            \\"name\\": \\"HQ US\\",
            \\"line1\\": \\"Main street\\",
            \\"line2\\": \\"apt #\\",
            \\"city\\": \\"San Francisco\\",
            \\"state\\": \\"CA\\",
            \\"postal_code\\": \\"94104\\",
            \\"country\\": \\"US\\",
            \\"latitude\\": \\"40.759211\\",
            \\"longitude\\": \\"-73.984638\\"
        }
    ],
    \\"social_links\\": [
        {
            \\"url\\": \\"https://www.twitter.com/apideck-io\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"twitter\\"
        },
        {
            \\"url\\": \\"https://www.twitter.com/apideck-io\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"twitter\\"
        }
    ],
    \\"phone_numbers\\": [
        {
            \\"number\\": \\"111-111-1111\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"number\\": \\"111-111-1111\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"emails\\": [
        {
            \\"email\\": \\"elon@musk.com\\",
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"email\\": \\"elon@musk.com\\",
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"custom_fields\\": [
        {
            \\"id\\": \\"custom_technologies\\",
            \\"value\\": \\"Uses Salesforce and Marketo\\"
        },
        {
            \\"id\\": \\"custom_technologies\\",
            \\"value\\": \\"Uses Salesforce and Marketo\\"
        }
    ],
    \\"tags\\": [
        \\"New\\"
    ]
}"
`;

exports[`Fuzzer should fuzz the value of a prop of the request body below the defined minimum 1`] = `
"{
    \\"name\\": \\"Elon Musk\\",
    \\"company_name\\": \\"Spacex\\",
    \\"owner_id\\": \\"54321\\",
    \\"company_id\\": \\"2\\",
    \\"contact_id\\": \\"2\\",
    \\"first_name\\": \\"Elon\\",
    \\"last_name\\": \\"Musk\\",
    \\"description\\": \\"A thinker\\",
    \\"prefix\\": \\"Sir\\",
    \\"title\\": \\"CEO\\",
    \\"status\\": \\"New\\",
    \\"monetary_amount\\": 99,
    \\"currency\\": \\"USD\\",
    \\"fax\\": \\"+12129876543\\",
    \\"websites\\": [
        {
            \\"url\\": \\"http://example.com\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"url\\": \\"http://example.com\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"addresses\\": [
        {
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\",
            \\"name\\": \\"HQ US\\",
            \\"line1\\": \\"Main street\\",
            \\"line2\\": \\"apt #\\",
            \\"city\\": \\"San Francisco\\",
            \\"state\\": \\"CA\\",
            \\"postal_code\\": \\"94104\\",
            \\"country\\": \\"US\\",
            \\"latitude\\": \\"40.759211\\",
            \\"longitude\\": \\"-73.984638\\"
        },
        {
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\",
            \\"name\\": \\"HQ US\\",
            \\"line1\\": \\"Main street\\",
            \\"line2\\": \\"apt #\\",
            \\"city\\": \\"San Francisco\\",
            \\"state\\": \\"CA\\",
            \\"postal_code\\": \\"94104\\",
            \\"country\\": \\"US\\",
            \\"latitude\\": \\"40.759211\\",
            \\"longitude\\": \\"-73.984638\\"
        }
    ],
    \\"social_links\\": [
        {
            \\"url\\": \\"https://www.twitter.com/apideck-io\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"twitter\\"
        },
        {
            \\"url\\": \\"https://www.twitter.com/apideck-io\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"twitter\\"
        }
    ],
    \\"phone_numbers\\": [
        {
            \\"number\\": \\"111-111-1111\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"number\\": \\"111-111-1111\\",
            \\"id\\": \\"12345\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"emails\\": [
        {
            \\"email\\": \\"elon@musk.com\\",
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\"
        },
        {
            \\"email\\": \\"elon@musk.com\\",
            \\"id\\": \\"123\\",
            \\"type\\": \\"primary\\"
        }
    ],
    \\"custom_fields\\": [
        {
            \\"id\\": \\"custom_technologies\\",
            \\"value\\": \\"Uses Salesforce and Marketo\\"
        },
        {
            \\"id\\": \\"custom_technologies\\",
            \\"value\\": \\"Uses Salesforce and Marketo\\"
        }
    ],
    \\"tags\\": [
        \\"New\\"
    ]
}"
`;
